bon/tests/integration/ui/compile_fail/builder_derives.stderr
error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
 --> tests/integration/ui/compile_fail/builder_derives.rs:8:15
  |
8 |     no_impls: NoTraitImpls,
  |               ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
  |
note: required by a bound in `clone_required_member`
 --> src/private/derives.rs
  |
  | pub fn clone_required_member<State: MemberState, T: Clone>(
  |                                                     ^^^^^ required by this bound in `clone_required_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
  |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/builder_derives.rs:10:30
   |
10 |     no_impl_optional: Option<NoTraitImpls>,
   |                              ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_optional_member`
  --> src/private/derives.rs
   |
   | pub fn clone_optional_member<T: Clone>(member: &Option<T>) -> Option<T> {
   |                                 ^^^^^ required by this bound in `clone_optional_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/builder_derives.rs:13:25
   |
13 |     no_impl_optional_2: NoTraitImpls,
   |                         ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_optional_member`
  --> src/private/derives.rs
   |
   | pub fn clone_optional_member<T: Clone>(member: &Option<T>) -> Option<T> {
   |                                 ^^^^^ required by this bound in `clone_optional_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
 --> tests/integration/ui/compile_fail/builder_derives.rs:8:15
  |
8 |     no_impls: NoTraitImpls,
  |               ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
  |
  = help: the trait `Debug` is not implemented for `NoTraitImpls`
  = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `debug_required_member`
 --> src/private/derives.rs
  |
  | pub fn debug_required_member<State: MemberState, T: Debug>(
  |                                                     ^^^^^ required by this bound in `debug_required_member`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
  |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/builder_derives.rs:10:30
   |
10 |     no_impl_optional: Option<NoTraitImpls>,
   |                              ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `debug_optional_member`
  --> src/private/derives.rs
   |
   | pub fn debug_optional_member<T: Debug>(member: &Option<T>) -> &dyn Debug {
   |                                 ^^^^^ required by this bound in `debug_optional_member`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/builder_derives.rs:13:25
   |
13 |     no_impl_optional_2: NoTraitImpls,
   |                         ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `debug_optional_member`
  --> src/private/derives.rs
   |
   | pub fn debug_optional_member<T: Debug>(member: &Option<T>) -> &dyn Debug {
   |                                 ^^^^^ required by this bound in `debug_optional_member`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/builder_derives.rs:20:16
   |
20 |     _no_impls: NoTraitImpls,
   |                ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_required_member`
  --> src/private/derives.rs
   |
   | pub fn clone_required_member<State: MemberState, T: Clone>(
   |                                                     ^^^^^ required by this bound in `clone_required_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/builder_derives.rs:22:31
   |
22 |     _no_impl_optional: Option<NoTraitImpls>,
   |                               ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_optional_member`
  --> src/private/derives.rs
   |
   | pub fn clone_optional_member<T: Clone>(member: &Option<T>) -> Option<T> {
   |                                 ^^^^^ required by this bound in `clone_optional_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/builder_derives.rs:25:26
   |
25 |     _no_impl_optional_2: NoTraitImpls,
   |                          ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_optional_member`
  --> src/private/derives.rs
   |
   | pub fn clone_optional_member<T: Clone>(member: &Option<T>) -> Option<T> {
   |                                 ^^^^^ required by this bound in `clone_optional_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/builder_derives.rs:20:16
   |
20 |     _no_impls: NoTraitImpls,
   |                ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `debug_required_member`
  --> src/private/derives.rs
   |
   | pub fn debug_required_member<State: MemberState, T: Debug>(
   |                                                     ^^^^^ required by this bound in `debug_required_member`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/builder_derives.rs:22:31
   |
22 |     _no_impl_optional: Option<NoTraitImpls>,
   |                               ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `debug_optional_member`
  --> src/private/derives.rs
   |
   | pub fn debug_optional_member<T: Debug>(member: &Option<T>) -> &dyn Debug {
   |                                 ^^^^^ required by this bound in `debug_optional_member`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/builder_derives.rs:25:26
   |
25 |     _no_impl_optional_2: NoTraitImpls,
   |                          ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `debug_optional_member`
  --> src/private/derives.rs
   |
   | pub fn debug_optional_member<T: Debug>(member: &Option<T>) -> &dyn Debug {
   |                                 ^^^^^ required by this bound in `debug_optional_member`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/builder_derives.rs:35:20
   |
35 |         _no_impls: NoTraitImpls,
   |                    ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_required_member`
  --> src/private/derives.rs
   |
   | pub fn clone_required_member<State: MemberState, T: Clone>(
   |                                                     ^^^^^ required by this bound in `clone_required_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/builder_derives.rs:37:35
   |
37 |         _no_impl_optional: Option<NoTraitImpls>,
   |                                   ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_optional_member`
  --> src/private/derives.rs
   |
   | pub fn clone_optional_member<T: Clone>(member: &Option<T>) -> Option<T> {
   |                                 ^^^^^ required by this bound in `clone_optional_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/builder_derives.rs:40:30
   |
40 |         _no_impl_optional_2: NoTraitImpls,
   |                              ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `clone_optional_member`
  --> src/private/derives.rs
   |
   | pub fn clone_optional_member<T: Clone>(member: &Option<T>) -> Option<T> {
   |                                 ^^^^^ required by this bound in `clone_optional_member`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/builder_derives.rs:35:20
   |
35 |         _no_impls: NoTraitImpls,
   |                    ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `debug_required_member`
  --> src/private/derives.rs
   |
   | pub fn debug_required_member<State: MemberState, T: Debug>(
   |                                                     ^^^^^ required by this bound in `debug_required_member`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/builder_derives.rs:37:35
   |
37 |         _no_impl_optional: Option<NoTraitImpls>,
   |                                   ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `debug_optional_member`
  --> src/private/derives.rs
   |
   | pub fn debug_optional_member<T: Debug>(member: &Option<T>) -> &dyn Debug {
   |                                 ^^^^^ required by this bound in `debug_optional_member`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/builder_derives.rs:40:30
   |
40 |         _no_impl_optional_2: NoTraitImpls,
   |                              ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `debug_optional_member`
  --> src/private/derives.rs
   |
   | pub fn debug_optional_member<T: Debug>(member: &Option<T>) -> &dyn Debug {
   |                                 ^^^^^ required by this bound in `debug_optional_member`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |
